# cratup_auto

./: .gitignore  Cargo.toml  README.org
cratup_init/: Cargo.toml
cratup_init/src/: config.rs
cratup_search/: Cargo.toml
cratup_search/src/: file_parts.rs  lib.rs  search.rs  string_format.rs
cratup_tree_sitter/: Cargo.toml
src/: increaser.rs  main.rs  publish.rs
