[package]
name = "cratup_search"
version = "0.2.1"
edition = "2024"
description = "Part of cratup_auto, searches a toml file for package version and dependencies versions"
license = "MIT"

[dependencies]
log = "0.4"
anyhow = "1.0.95"
console = "0.15.10"
env_logger = "0.11.7"
walkdir = "2.5.0"
colored = "3.0.0"

cratup_tree_sitter = { version = "0.2", path = "../cratup_tree_sitter"}
strsim = "0.11.1"
