[package]
name = "cratup_tree_sitter"
version = "0.2.0"
edition = "2024"
description = "Part of cratup_auto, uses tree-sitter to parse a Toml file for package and dependencies info"
license = "MIT"

[dependencies]
derive_more = { version = "2", features = ["full"] }
semver = "1.0.26"
thiserror = "2.0.12"
tree-sitter = "0.20.0"
tree-sitter-toml = "0.20.0"
log = "0.4"

[build-dependencies]
cc = "1.2.19"
